--- a/Power Data Analysis/Power_Data_Analysis.ipynb
+++ b/Power Data Analysis/Power_Data_Analysis.ipynb
@@ -27,7 +27,7 @@
         "import matplotlib.pyplot as plt \r\n",
         "import seaborn as sns"
       ],
-      "execution_count": 118,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -36,9 +36,9 @@
         "id": "_Yji9GZOkKg7"
       },
       "source": [
-        "df_power = pd.read_csv(\"https://raw.githubusercontent.com/jenfly/opsd/master/opsd_germany_daily.csv\")"
+        "df_power = pd.read_csv(\"/content/drive/MyDrive/Colab Datasets/opsd_germany_daily.csv\")"
       ],
-      "execution_count": 119,
+      "execution_count": 143,
       "outputs": []
     },
     {
